--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
+    "@pinata/sdk": "^1.1.26",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.10.1",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.12",
